@@ -8,7 +8,7 @@ Proc::tored - Service management using a pid file and signals
 
 =head1 VERSION
 
-version 0.05
+version 0.06
 
 =head1 SYNOPSIS
 
